<resources>
    <string name="app_name">Did You Buy It</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please wait</string>
    <string name="error_empty_username">Username can\'t be empty</string>
    <string name="error_empty_password">Password can\'t be empty</string>
    <string name="error_min_password_length">Password is too short</string>
    <string name="error_empty_name">Name can\'t be empty</string>
    <string name="error_empty_email">Email can\'t be empty</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="error_min_username_length">Username must be at least 3 characters</string>
    <string name="error_login_failed">Login failed. Please try again.</string>
    <string name="error_failed_to_load_image">Failed to load image</string>
    <string name="action_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="alt_user_profile_image">Profile image</string>
    <string name="alt_create_new_list">Create new list</string>
    <string name="action_logout">Log out</string>
    <string name="menu_exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_quit_app">Exit application?</string>
    <string name="confirm_quit_app_message">Are you sure you want to exit the application?</string>
    <string name="sign_up">Sign up</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_sign_up_failed">Sign up failed</string>
    <string name="sign_up_success">You have created your account successfully. Please check your email to confirm your account.</string>
    <string name="sign_up_success_title">Sign up successful</string>
    <string name="error_lists_loading_failed">Failed to load lists</string>
    <string name="error_list_loading_failed">Failed to load list</string>
    <string name="lbl_list_items_count">Items: %1$d / %2$d</string>
    <string name="lbl_list_users_count">Users: %1$d</string>
    <string name="title_activity_list">List</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lbl_list_items">Items</string>
    <string name="lbl_list_users">Users</string>
    <string name="error_list_not_found">List not found</string>
    <string name="error_list_item_loading_failed">Failed to load list items</string>
    <string name="list_item_image">Image for the list item</string>
    <string name="list_item_repeating">This is a repeating item</string>
    <string name="lbl_list_item_purchase_date">Bought on %1$s by %2$s</string>
    <string name="error_unable_to_update_list_item">Unable to update list item</string>
    <string name="list_item_bought_state_update_success">Item bought state updated successfully</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_delete">Delete</string>
    <string name="enlarge_image">Enlarge image</string>
    <string name="lbl_repeating_item">Repeating item</string>
    <string name="lbl_owner">Owner</string>
    <string name="error_list_users_failed_to_load">Failed to load the users for this list</string>
    <string name="action_confirm_user_delete">Are you sure you want to remove the user %1$s from this list?</string>
    <string name="lbl_confirm_action">Confirm action</string>
    <string name="error_deleting_list_user">There was an error while deleting the list user</string>
    <string name="lbl_add_new_item">Add new item</string>
    <string name="title_activity_image_view">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lbl_image_placeholder">Image placeholder</string>
    <string name="action_confirm_list_item_delete">Are you sure you want to delete the item \"%1$s\"</string>
    <string name="error_deleting_list_item">There was an error trying to remove the list item.</string>
    <string name="list_item_removed_success">List item deleted successfully</string>
    <string name="lbl_edit_list_item">Edit list item</string>
    <string name="lbl_update_item">Update item</string>
    <string name="prompt_list_item_name">Item name:</string>
    <string name="prompt_repeating_item">Is this item repeatable?</string>
    <string name="lbl_add_new_item_image">Add new list item image</string>
    <string name="lbl_add_new_image">Add new image</string>
    <string name="lbl_list_item_image">Preview of a list item image</string>
    <string name="lbl_remove_image">Remove image</string>
    <string name="app_camera_permission_needed">Camera permission is required for adding new images</string>
    <string name="error_no_camera_found">No camera found, unable to take images</string>
    <string name="save">Save</string>
    <string name="add_new_list">Add new list</string>
    <string name="prompt_list_name">List name</string>
    <string name="cancel">Cancel</string>
    <string name="error_failed_to_create_list">Failed to create new list</string>
    <string name="lbl_new_list_created">List %1$s was created</string>
    <string name="error_value_required">Value is required</string>
    <string name="error_failed_to_add_list_item">Failed to add list item</string>
    <string name="list_item_add_success">List item added successfully</string>
    <string name="error_unable_to_remove_list_item_image">Unable to remove the image</string>
    <string name="list_item_image_removed_success">Image removed successfully</string>
    <string name="lbl_confirm_image_deletion">Are you sure you want to remove the image? This action can not be reverted.</string>
    <string name="error_failed_to_update_list_item">Failed to updated list item</string>
    <string name="list_item_update_success">List item updated successfully</string>
    <string name="add_new_user_to_list">Add new user to the list</string>
    <string name="search_for_user">Search for user…</string>
    <string name="title_2_columns">%1$s - %2$s</string>
    <string name="error_loading_users">Error loading users</string>
    <string name="lbl_confirm_add_user_to_list">Are you sure you want to add user %1$s to the list?</string>
    <string name="error_adding_user_to_list">There was an error trying to add new user to the list</string>
    <string name="error_token_expired">Session expired. Please log in again.</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="alt_update_profile">Update profile</string>
</resources>