<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:padding="@dimen/padding_medium">

    <EditText
        android:id="@+id/edtListItemDialogName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:autofillHints="@string/prompt_list_item_name"
        android:hint="@string/prompt_list_item_name"
        android:inputType="text"
        android:maxLines="3"
        android:selectAllOnFocus="true" />

    <CheckBox
        android:id="@+id/cbListItemDialogIsRepeating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtListItemDialogName"
        android:layout_centerHorizontal="true"
        android:hint="@string/prompt_repeating_item" />

    <Button
        android:id="@+id/btnListItemDialogAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbListItemDialogIsRepeating"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/lbl_add_new_image" />

    <ImageView
        android:id="@+id/imgListItemDialogPreview"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_below="@id/btnListItemDialogAddImage"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:contentDescription="@string/lbl_list_item_image"
        android:scaleType="fitXY"
        android:visibility="gone"
        tools:src="@tools:sample/avatars"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/btnListItemDialogRemoveImage"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_alignTop="@id/imgListItemDialogPreview"
        android:layout_alignBottom="@+id/imgListItemDialogPreview"
        android:layout_gravity="center"
        android:layout_toEndOf="@id/btnListItemDialogAddImage"
        android:contentDescription="@string/lbl_remove_image"
        android:src="@drawable/ic_delete"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>