<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lytCardListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium">

        <ImageView
            android:id="@+id/imgListItemImage"
            android:layout_width="95sp"
            android:layout_height="95sp"
            android:layout_marginTop="@dimen/padding_small"
            android:contentDescription="@string/list_item_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imgListItemEnlarge"
            style="@style/image_enlarge_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_small"
            android:layout_toStartOf="@id/lblListItemName"
            android:contentDescription="@string/enlarge_image"
            android:src="@drawable/ic_zoom_out"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/lblListItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/imgListItemImage"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_toStartOf="@id/cbBuyItem"
            android:layout_toEndOf="@id/imgListItemImage"
            android:maxLines="3"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/lblListItemRepeating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblListItemName"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_toEndOf="@id/imgListItemImage"
            android:text="@string/lbl_repeating_item"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/lblListItemPurchaseInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblListItemRepeating"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_toEndOf="@id/imgListItemImage"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic"
            tools:text="@string/lbl_list_item_purchase_date" />

        <CheckBox
            android:id="@+id/cbBuyItem"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:layout_alignParentEnd="true"
            android:layout_margin="0sp"
            android:padding="0sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/list_separator_background"
        tools:ignore="SmallSp" />
</LinearLayout>