<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lytCardListUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium">

        <ImageView
            android:id="@+id/imgListUserImage"
            android:layout_width="95sp"
            android:layout_height="95sp"
            android:layout_marginTop="@dimen/padding_small"
            android:contentDescription="@string/list_item_image"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imgListUserEnlarge"
            style="@style/image_enlarge_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_small"
            android:layout_toStartOf="@id/lblListUserName"
            android:contentDescription="@string/enlarge_image"
            android:src="@drawable/ic_zoom_out"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/lblListUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/imgListUserImage"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_toEndOf="@id/imgListUserImage"
            android:maxLines="3"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/lblListUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblListUserName"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_toEndOf="@id/imgListUserImage"
            tools:text="@tools:sample/cities"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/lblListUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblListUserEmail"
            android:layout_toEndOf="@+id/imgListUserImage"
            android:layout_marginStart="@dimen/padding_medium"
            android:text="@string/lbl_owner"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic"
            android:visibility="gone"
            tools:visibility="visible" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/list_separator_background"
        tools:ignore="SmallSp" />
</LinearLayout>